--- a/hoof/experiment_params.yaml
+++ b/hoof/experiment_params.yaml
@@ -2,6 +2,7 @@ ant: Ant-v2
 cheetah: HalfCheetah-v2
 hopper: Hopper-v2
 walker: Walker2d-v2
+lunar: LunarLander-v2
 total_ts: 5000000
 # TNPG params
 batch_size: 10000
